@@ -67,7 +67,7 @@ proc find_rawsid { } {
 	# srcdir=/..../sid/component/testsuite
 	set tcl_library "$srcdir/tcl/library"
         global host_os
-	switch -glob $host_os {
+	switch -glob -- $host_os {
 	    {cygwin*} { set tcl_library [exec cygpath -w $tcl_library] }
         }
 	set env(TCL_LIBRARY) $tcl_library
